# gpu-svm

./: CMakeLists.txt  Global.h  README-GPU  README.md  cross_validation_with_matrix_precomputation.c  cross_validation_with_matrix_precomputation.cpp  cross_validation_with_matrix_precomputation.cu  cross_validation_with_matrix_precomputation.h  grid.cpp  grid.h  kernel_matrix_calculation.c  kernel_matrix_calculation.cpp  kernel_matrix_calculation.cu  kernel_matrix_calculation.h  main.cpp  svm-cv-train.cpp  svm-predict.cpp  svm-train.c  svm-train.cpp  svm.cpp  svm.h  svm_predict_dense.cpp
